--- a/style.scss
+++ b/style.scss
@@ -200,7 +200,7 @@ body {
     font-weight: bolder;
     background: #eaeaea;
     border:none;
-    width: 15%
+    width: 135px;
   }
 }
 .blocs-intro {
