--- a/style.scss
+++ b/style.scss
@@ -259,7 +259,7 @@ body {
 .section.process {
   padding-bottom: 50px;
 }
-section.process h2 {
+.process-restaurants h2 {
   margin-left: 20px;
 }
 .process-bloc {
