--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,3 @@
-
-
 .monloader {
   display: flex;
   justify-content: center;
@@ -197,9 +195,9 @@ body {
   }
   input {
     margin-left: 15px;
-    font-weight: bolder;
+    font-weight: normal;
     background: #eaeaea;
-    border:none;
+    border: none;
     width: 135px;
   }
 }
@@ -261,10 +259,9 @@ body {
 }
 .process-restaurants h2 {
   margin-left: 20px;
-  
 }
-.none{
-  display:none;
+.none {
+  display: none;
 }
 .process-bloc {
   @include flex-mid;
@@ -305,7 +302,7 @@ body {
 }
 .process-bloc-resto:hover {
   cursor: pointer;
-  
+
   background: #f5edff;
   transform: scale(1.1);
   transition: 0.31s;
@@ -373,11 +370,10 @@ body {
     height: 28px;
     width: 85px;
     border-radius: 3px;
-    
   }
 }
 .card-new {
-  animation:0.5s 0s infinite both new-case;
+  animation: 0.5s 0s infinite both new-case;
 }
 .text-case {
   display: flex;
@@ -402,14 +398,14 @@ body {
   font-size: 30px;
   height: 35px;
   width: 35px;
-  position:relative;
+  position: relative;
 
   .far {
     height: 30px;
     width: 30px;
     transition: 0.4s;
     opacity: 1;
-    position:absolute;
+    position: absolute;
   }
   .fas {
     width: 35px;
@@ -449,14 +445,12 @@ body {
 }
 .text-icon:hover {
   .far {
-    
     opacity: 0;
     transition: 0.9s;
   }
   .fas {
     opacity: 1;
     transition: 0.9s;
-   
   }
 }
 
@@ -472,18 +466,17 @@ footer {
     font-family: "Shrikhand", cursive;
     font-weight: 100;
     margin-left: 68px;
-    height:4px;
+    height: 4px;
   }
 }
 .footer-list {
   display: flex;
   flex-direction: column;
   width: 80%;
-  margin-left:20px;
+  margin-left: 20px;
   align-items: flex-end;
   margin-bottom: 80px;
-  
- 
+
   .footer_1,
   .footer_2,
   .footer_3,
@@ -492,9 +485,8 @@ footer {
     margin: 10px 0;
     text-decoration: none;
     list-style-type: none;
-    font-size:10px;
-    height:5px;
-    
+    font-size: 10px;
+    height: 5px;
   }
 }
 
@@ -506,7 +498,7 @@ footer {
   display: flex;
   width: 80%;
   align-items: center;
-  justify-content:flex-start;
+  justify-content: flex-start;
   color: rgb(255, 255, 255);
   margin: 0 0 0 10px;
 
@@ -518,7 +510,6 @@ footer {
   h4 {
     margin: 0 10px;
     font-size: 13px;
-  
   }
 }
 
@@ -526,7 +517,6 @@ footer {
   color: white;
   margin: 0 0 0 10px;
   width: 87%;
-  
 }
 /******pages-restaurants******/
 .R-header {
@@ -561,14 +551,12 @@ footer {
 }
 #icones-heart {
   position: relative;
-  
+
   .fa-heart {
-    position:absolute;
-    transition:0.5s;
-   left:-36px;
-    top:-15px;
-    
-    
+    position: absolute;
+    transition: 0.5s;
+    left: -36px;
+    top: -15px;
   }
 }
 .card-text-case {
@@ -582,7 +570,7 @@ footer {
   letter-spacing: 1px;
   border-radius: 35px 35px 0 0;
   font-style: normal;
-  
+
   transition: 0.5s;
   .card-title {
     margin: 25px 0;
@@ -592,33 +580,30 @@ footer {
   .fas {
     font-size: 27px;
     transition: 0.3s;
-    
   }
   .fas {
-    
     opacity: 0;
     background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-image: linear-gradient(
-        to top,
-        #b387d6,
-        #bf85d9,
-        #cc81db,
-        #d97edc,
-        #e779db
-      );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(
+      to top,
+      #b387d6,
+      #bf85d9,
+      #cc81db,
+      #d97edc,
+      #e779db
+    );
   }
   #icones-heart:hover {
     transition: 1.9s;
+    cursor: pointer;
     .far {
-      opacity:0;
+      opacity: 0;
     }
     .fas {
       opacity: 1;
       transition: 1.5s;
-      
-      
     }
   }
 }
@@ -636,10 +621,10 @@ footer {
     flex-direction: column;
     width: 81%;
     font-size: 17px;
-    font-weight:400;
+    font-weight: 400;
     margin: 0;
     .title-case {
-      width:60%;
+      width: 60%;
     }
     .entrees {
       margin: 10px 0 8px 10px;
@@ -695,10 +680,9 @@ footer {
   }
   .title-menu {
     margin-bottom: 2px;
-    
   }
   .long-name {
-    margin-top: 5px; 
+    margin-top: 5px;
   }
   .title-menu,
   .long-name {
@@ -707,7 +691,6 @@ footer {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    
   }
 
   .price-menu {
@@ -762,7 +745,6 @@ footer {
   .fa-check-circle {
     animation: 0.3s 1 both rotation-logo;
   }
-  
 }
 @keyframes rotation-logo {
   0% {
@@ -780,14 +762,14 @@ footer {
     width: 30px;
   }
 }
-@keyframes new-case{
+@keyframes new-case {
   from {
     transform: scale(1);
-    color:#008766;
+    color: #008766;
   }
   to {
     transform: scale(1.07);
-    color:white;
+    color: white;
   }
 }
 .search {
@@ -897,7 +879,7 @@ footer {
     letter-spacing: 2px;
     font-size: 17px;
   }
-  
+
   .process {
     display: flex;
     flex-direction: column;
@@ -939,8 +921,8 @@ footer {
     }
   }
   .restaurants {
-    width:70%;
-    margin-right:10px;
+    width: 70%;
+    margin-right: 10px;
     margin-bottom: 40px;
   }
   .bloc-restaurant {
@@ -964,7 +946,7 @@ footer {
     flex-wrap: wrap;
     align-content: flex-end;
     justify-content: space-between;
-    margin:0 30px;
+    margin: 0 30px;
   }
   .items-menu {
     width: 30%;
@@ -977,7 +959,6 @@ footer {
     align-items: center;
     font-size: 22px;
     .h3 {
-      
       margin: 30% 0;
     }
     .footer-list {
@@ -988,7 +969,6 @@ footer {
       flex-direction: row;
       flex-wrap: nowrap;
       align-items: center;
-      
     }
     .icon-text {
       width: auto;
@@ -1024,7 +1004,7 @@ footer {
     letter-spacing: 2px;
     font-size: 17px;
   }
-  
+
   .process {
     display: flex;
     flex-direction: column;
@@ -1066,8 +1046,8 @@ footer {
     }
   }
   .restaurants {
-    width:70%;
-    margin-right:10px;
+    width: 70%;
+    margin-right: 10px;
     margin-bottom: 40px;
   }
   .bloc-restaurant {
@@ -1091,7 +1071,7 @@ footer {
     flex-wrap: wrap;
     align-content: flex-end;
     justify-content: space-between;
-    margin:0 30px;
+    margin: 0 30px;
   }
   .items-menu {
     width: 30%;
@@ -1104,7 +1084,6 @@ footer {
     align-items: center;
     font-size: 22px;
     .h3 {
-      
       margin: 30% 0;
     }
     .footer-list {
@@ -1132,7 +1111,7 @@ footer {
     width: auto;
   }
 }
-@media  screen and (max-width:460px) {
+@media screen and (max-width: 460px) {
   .btn-text-case {
     max-width: 360px;
     min-width: 20px;
